<resources>
    <string name="app_name">Volleyball Management</string>

    <string name="title_logout">Confirm Logout!</string>
    <string name="msg_logout">Are you sure you want to logout?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="title_no_internet">Internet connection error!</string>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_forgot_password">Forgot Password ?</string>
    <string name="text_screen_forgot_password">Forgot Password</string>

    <string name="text_first_name">First Name</string>
    <string name="text_name">Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_dob">DOB</string>
    <string name="text_gender">Gender</string>
    <string name="text_contact">Contact</string>
    <string name="text_join_date">Join Date</string>
    <string name="text_date">Date</string>
    <string name="text_address">Address</string>
    <string name="text_experience">Experience</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_email">Email</string>
    <string name="text_score">Score</string>

    <string name="text_go">GO</string>
    <string name="text_guest">Guest? SKIP And GO</string>
    <string name="text_welcome">Hello there,Welcome</string>
    <string name="text_sign_in">Sign In to Continue</string>
    <string name="text_done">Done</string>
    <string name="text_screen_change_password">Change Password</string>
    <string name="text_old_password">Old Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_volley_victions">Volley Victions</string>
    <string name="text_volleyball_management">VolleyBall Management App</string>

    <string name="text_teams">Teams</string>
    <string name="text_players">Players</string>
    <string name="text_tournament">Tournament</string>
    <string name="text_tournament_team">Tournament team</string>
    <string name="text_schedules">Schedules</string>
    <string name="text_your_profile">Your profile</string>
    <string name="text_add_player">Add/Edit player</string>
    <string name="text_update_score">Update score</string>
    <string name="text_add_tournament">Add/Edit tournament</string>
    <string name="text_add_team_manager">Add/Edit team manager</string>
    <string name="text_add_team">Add/Edit team</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_matches">Matches</string>
    <string name="text_team_manager">Team manager</string>
    <string name="text_playerlist">Player List</string>
    <string name="text_season">Season</string>
    <string name="text_add_season">Add/Edit season</string>
    <string name="text_select_team">Select team</string>
    <string name="text_add_tournament_team">Add tournament team</string>

    <string name="text_search_player">Search Player</string>
    <string name="text_search_team">Search Team Manager</string>
    <string name="no_data_found">No data found</string>

    <string name="err_empty_email">Please enter email</string>
    <string name="err_valid_email">Please enter valid email</string>
    <string name="err_empty_pass">Please enter password</string>
    <string name="err_empty_old_password">Please enter old password</string>
    <string name="err_empty_confirm_pass">Please enter confirm password</string>
    <string name="err_pass_not_match">Password does not match with confirm password</string>
    <string name="err_empty_first_name">Please enter first name</string>
    <string name="err_empty_name">Please enter name</string>
    <string name="err_empty_last_name">Please enter last name</string>
    <string name="err_empty_address">Please enter address</string>
    <string name="err_valid_first_name">First name length should be minimum 2 character long</string>
    <string name="err_valid_name">name length should be minimum 2 character long</string>
    <string name="err_valid_last_name">Last name length should be minimum 2 character long</string>
    <string name="err_valid_address">Address length should be minimum 2 character long</string>
    <string name="err_valid_contact">Contact length should be minimum 10 character long</string>
    <string name="err_Please_empty_contact">Please enter contact</string>
    <string name="err_select_dob">Please select date of birth</string>
    <string name="err_select_join_date">Please select join date</string>
    <string name="err_valid_experience">Please enter valid experience</string>
    <string name="err_empty_experience">Please enter experience</string>
    <string name="err_select_image">Please select image</string>
    <string name="err_select_player">Please select player</string>
    <string name="err_select_date">Please select date</string>
    <string name="err_select_different_team">Please select different team</string>
    <string name="err_empty_team_one_score">Please enter team one score</string>
    <string name="err_empty_team_two_score">Please enter team two score</string>

    <string name="title_delete">Confirm Delete!</string>
    <string name="msg_delete">Are you sure you want to delete?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="upcoming">UpComing</string>
    <string name="Running">Running</string>
    <string name="Completed">Completed</string>
    <string name="match">Match</string>
    <string name="winner">Winner</string>


</resources>

