<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.canada.volleyballmanagement.widget.DTextView
                android:id="@+id/txtCamera"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/camera"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:textFontFace="MEDIUM" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />


            <com.canada.volleyballmanagement.widget.DTextView
                android:id="@+id/txtGallery"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/gallery"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:textFontFace="MEDIUM" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />


            <com.canada.volleyballmanagement.widget.DTextView
                android:id="@+id/txtCancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:textFontFace="MEDIUM" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
