<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="activity"
            type="com.canada.volleyballmanagement.activity.ForgotPasswordActivity" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/txtLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_screen_forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_30sdp"
                app:fontFamily="@font/bungee" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp" />

                <com.canada.volleyballmanagement.widget.DButton
                    android:id="@+id/btnDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:onClick="@{(View)->activity.onViewClicked(View)}"
                    android:text="@string/text_done"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:textFontFace="BOLD" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>